2006-03-30  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/rawip.c: working up second gen rawip driver
	* src/drivers/rawip.c: corrections for x86_64 compile

2006-03-25  Brian Bidulock  <bidulock@openss7.org>

	* src/test/test-inet_tcp.c: rationalized to test-inet_sctp.c
	* src/drivers/udp.c: corrected some compile problems

2006-03-24  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/strinet.refs: updated LiS and STREAMS release numbers
	* doc/man/Makefile.am: added manpages for new udp and rawip drivers
	* doc/man/man4/rawip.4.man: added manpages for new udp and rawip drivers
	* doc/man/man4/rawip2.4.man: added manpages for new udp and rawip drivers
	* doc/man/man4/tcp.4.man: added manpages for new udp and rawip drivers
	* doc/man/man4/udp.4.man: added manpages for new udp and rawip drivers
	* doc/man/man4/udp2.4.man: added manpages for new udp and rawip drivers
	* strinet.spec.in (%package test): described send-pr
	* acinclude.m4: 2.6.15 has no proto member in net_protocol
	* src/drivers/lis.conf.in: correction
	* src/drivers/rawip.c: changes to compile on x86_64 2.6.15
	* src/drivers/udp.c: changes to compile on x86_64 2.6.15
	* src/drivers/udp.c: working up UDP driver
	* src/test/test-inet_sctp.c: rationalized to strsctp package

2006-03-24  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/rawip.c: added new rawip driver
	* src/drivers/lis.conf.in: added new rawip driver
	* Maekfile.am: added new rawip driver

2006-03-23  Brian Bidulock  <bidulock@openss7.org>

	* strinet.spec.in: added send-pr files
	* NEWS: updated release notes
	* doc/manual/releases.texi: updated release notes
	* src/drivers/lis.conf.in: added new udp driver
	* Makefile.am: added new udp driver
	* configure.ac: added src/drivers/udp_hooks.h config header
	* acinclude.m4: rationalized to strxns (added missing checks)
	* src/drivers/udp.c: first compile pass

2006-03-22  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/strinet.texi: added makefile target index