@@ -1,5 +1,5 @@
-From bidulock@openss7.org Wed Mar 15 13:45:30 2006
-Date: Wed, 15 Mar 2006 13:22:35 -0700
+From bidulock@openss7.org Thu Mar 30 17:33:50 MST 2006
+Date: Thu, 30 Mar 2006 17:33:57 -0700
 From: "Brian F. G. Bidulock" <bidulock@openss7.org>
 To: "Linux Announce" <cola@stump.algebra.com>
 Cc: "OpenSS7 Announce List" <openss7-announce@openss7.org>,
@@ -11,7 +11,7 @@ Organization: The OpenSS7 Project <http://www.openss7.org/>
 Dsn-Notification-To: <bidulock@openss7.org>
 Return-Receipt-To: <bidulock@openss7.org>
 
-strinet-0.9.2.3 was released under GPLv2 on March 15, 2006.
+strinet-0.9.2.4 was released under GPLv2 on March 30, 2006.
 
 STREAMS INET is an implementation of Internet Protocol for Linux
 Fast-STREAMS directly over the Linux NET4 Sockets implementation, using
@@ -30,33 +30,14 @@ This release is primarily to support additional compilers (gcc 4.0.2),
 architectures (x86_64, SMP, 32-bit compatibility), recent Linux
 distributions (EL4, SuSE 10, LE2006, OpenSuSE) and kernels (2.6.15).
 
-This is primarily a maintenance release.  Validated for operation on
-x86_64 SMP kernel using Linux Fast-STREAMS.  Changes included to handle
-__LP64__ kernels.  Corrected build flags for Gentoo and 2.6.15 kernels
-as reported on mailing list.  Corrects several bugs reported by project
-sponsors.  It includes:
+This release is a maintenance release.  It provides the following
+enhancements and fixes:
 
- - Changes necessary for __LP64__ compatible builds.  Changes to support
-   32-bit ioctl compatibility for __LP64__ architectures.  Binary
-   compatibility should not have been disrupted.  At the same time as
-   the ioctl32 changes, TRANSPARENT ioctl support for most of the IO
-   controls for the ldl(4) driver has been added.
+  - Added --enable-devel configure option for embedded targets.
 
- - Changes to satisfy gcc 4.0.2 compiler.
+  - Added send-pr script for automatic problem report generation.
 
- - Corrections for and testing of 64-bit clean compile and test runs on
-   x86_64 architecture.  Some bug corrections resulting from gcc 4.0.2
-   compiler warnings.
-
- - Corrected build flags for Gentoo and 2.6.15 kernels as reported on
-   mailing list.
-
- - Initial corrections for and testing of SMP operation on Intel 630
-   Hyper-Threaded SMP on x86_64.  This package should now run well on
-   N-way Xeons even with Hyper-Threading enabled.
-
- - Corrections and validation of 32-bit compatibility over 64-bit on
-   x86_64.  Should apply well to other 64-bit architectures as well.
+  - Fixed buffer leak in ss_sock_sendmsg reported by John Wenker.
 
  This is a public gamma release of the package: it deprecates previous
  packages.  Please upgrade before reporting problems with previous
@@ -74,20 +55,20 @@ the autoconf tarballs and SRPMs.  See the strinet package page at
 <http://www.openss7.org/strinet_pkg.html> for tarballs, SRPMs and binary
 RPMs.
 
-See <http://www.openss7.org/codefiles/strinet-0.9.2.3/ChangeLog> and
-<http://www.openss7.org/codefiles/strinet-0.9.2.3/NEWS> in the release
+See <http://www.openss7.org/codefiles/strinet-0.9.2.4/ChangeLog> and
+<http://www.openss7.org/codefiles/strinet-0.9.2.4/NEWS> in the release
 for more information.  Also, see the strinet.pdf manual in the release
 (also in html <http://www.openss7.org/strinet_manual.html>).
 
-For the news release, see <http://www.openss7.org/rel20060315_8.html>
+For the news release, see <http://www.openss7.org/rel20060330_1.html>
 
 --
 Brian F. G. Bidulock
 bidulock@openss7.org
 http://www.openss7.org/
 
-From bidulock@openss7.org Wed Mar 15 13:45:30 2006
-Date: Wed, 15 Mar 2006 13:22:35 -0700
+From bidulock@openss7.org Thu Mar 30 17:33:50 MST 2006
+Date: Thu, 30 Mar 2006 17:33:57 -0700
 From: "Brian F. G. Bidulock" <bidulock@openss7.org>
 To: "Linux Software Map" <LSM@execpc.com>
 Subject: add
@@ -98,8 +79,8 @@ Return-Receipt-To: <bidulock@openss7.org>
 
 Begin4
 Title:			strinet
-Version:		0.9.2.3
-Entered-date:		2006-03-15
+Version:		0.9.2.4
+Entered-date:		2006-03-30
 Description:		OpenSS7 INET Networking
 			OpenSS7 STREAMS INET (Internet Protocol) Driver for
 			Linux Fast-STREAMS.
@@ -119,10 +100,10 @@ Keywords:		XNS, INET, TPI
 Author:			bidulock@openss7.org (Brian Bidulock)
 Maintained-by:		bidulock@openss7.org (Brian Bidulock)
 Primary-site:		http://www.openss7.org/ tarballs/
-			2.1M strinet-0.9.2.3.tar.gz
-			1.7M strinet-0.9.2.3.tar.bz2
+			2M strinet-0.9.2.4.tar.gz
+			2M strinet-0.9.2.4.tar.bz2
 Alternate-site:		http://www.openss7.org/ rpms/SRPMS/
-			1.7M strinet-0.9.2.3-1.src.rpm
+			2M strinet-0.9.2.4-1.src.rpm
 Original-site:		
 Platforms:		Linux
 			Requires: Linux kernel 2.4 or 2.6,
