@@ -1,7 +1,7 @@
 @c -*- texinfo -*- vim: ft=texinfo
 @c =========================================================================
 @c
-@c @(#) $Id: releases.texi,v 0.9.2.18 2006/03/24 00:04:22 brian Exp $
+@c @(#) $Id: releases.texi,v 0.9.2.19 2006/03/31 00:37:17 brian Exp $
 @c
 @c =========================================================================
 @c
@@ -54,7 +54,7 @@
 @c 
 @c =========================================================================
 @c
-@c Last Modified $Date: 2006/03/24 00:04:22 $ by $Author: brian $
+@c Last Modified $Date: 2006/03/31 00:37:17 $ by $Author: brian $
 @c
 @c =========================================================================
 
@@ -279,8 +279,13 @@ The sections that follow provide information on OpenSS7 releases of the @*
 @subsection Release @value{PACKAGE}-@value{VERSION}
 @cindex release @value{PACKAGE}-@value{VERSION}
 
-Added @samp{--enable-devel} @command{configure} option for embedded targets.
-Added @command{send-pr} script for automatic problem report generation.
+This release is a maintenance release.  It provides the following enhancements and fixes:
+
+@itemize
+@item Added @samp{--enable-devel} @command{configure} option for embedded targets.
+@item Added @command{send-pr} script for automatic problem report generation.
+@item Fixed buffer lead in @samp{ss_sock_sendmsg} reported by John Wenker.
+@end itemize
 
 @c ----------------------------------------------------------------------------
 
