@@ -1,7 +1,7 @@
 @c -*- texinfo -*- vim: ft=texinfo
 @c =========================================================================
 @c
-@c @(#) $Id: funding.texi,v 0.9.2.2 2005/07/08 13:15:40 brian Exp $
+@c @(#) $Id: funding.texi,v 0.9.2.3 2006/03/31 00:37:18 brian Exp $
 @c
 @c =========================================================================
 @c
@@ -54,7 +54,7 @@
 @c 
 @c =========================================================================
 @c
-@c Last Modified $Date: 2005/07/08 13:15:40 $ by $Author: brian $
+@c Last Modified $Date: 2006/03/31 00:37:18 $ by $Author: brian $
 @c
 @c =========================================================================
 
@@ -110,5 +110,6 @@ contributors to @uref{http://www.openss7.org/, The OpenSS7 Project}:
 @item Tom Chandler
 @item Gurol Ackman
 @item Kutluk Testicioglu
+@item John Wenker
 @item Others
 @end itemize
