@@ -1,13 +1,17 @@
 OpenSS7 STREAMS INET -- history of user-visible changes.  2006-03-23
-$Id: NEWS,v 0.9.2.11 2006/03/24 00:04:21 brian Exp $
+$Id: NEWS,v 0.9.2.12 2006/03/31 00:37:16 brian Exp $
 Copyright (c) 2001-2006  OpenSS7 Corporation  <http://www.openss7.com/>
 Copyright (c) 1997-2000  Brian Bidulock  <bidulock@openss7.org>
 See the end for copying conditions (for this file).
 
 * Major changes for strinet-0.9.2.4
 
-  Added --enable-devel configure option for embedded targets.
-  Added send-pr script for automatic problem report generation.
+  This release is a maintenance release.  It provides the following
+  enhancements and fixes:
+
+  - Added --enable-devel configure option for embedded targets.
+  - Added send-pr script for automatic problem report generation.
+  - Fixed buffer leak in ss_sock_sendmsg reported by John Wenker.
 
 * Major changes for strinet-0.9.2.3
 
